@@ -11,10 +11,10 @@ package org.eclipse.hawkbit.repository.jpa.autoassign;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.persistence.PersistenceException;
 
+import org.eclipse.hawkbit.ContextAware;
 import org.eclipse.hawkbit.exception.AbstractServerRtException;
 import org.eclipse.hawkbit.repository.DeploymentManagement;
 import org.eclipse.hawkbit.repository.TargetFilterQueryManagement;
@@ -22,7 +22,6 @@ import org.eclipse.hawkbit.repository.TargetManagement;
 import org.eclipse.hawkbit.repository.jpa.configuration.Constants;
 import org.eclipse.hawkbit.repository.model.Target;
 import org.eclipse.hawkbit.repository.model.TargetFilterQuery;
-import org.eclipse.hawkbit.tenancy.TenantAware;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.data.domain.PageRequest;
@@ -54,36 +53,36 @@ public class AutoAssignChecker extends AbstractAutoAssignExecutor {
      *            to assign distribution sets to targets
      * @param transactionManager
      *            to run transactions
-     * @param tenantAware
-     *            to handle the tenant context
+     * @param contextAware
+     *            to handle the context
      */
     public AutoAssignChecker(final TargetFilterQueryManagement targetFilterQueryManagement,
             final TargetManagement targetManagement, final DeploymentManagement deploymentManagement,
-            final PlatformTransactionManager transactionManager, final TenantAware tenantAware) {
-        super(targetFilterQueryManagement, deploymentManagement, transactionManager, tenantAware);
+            final PlatformTransactionManager transactionManager, final ContextAware contextAware) {
+        super(targetFilterQueryManagement, deploymentManagement, transactionManager, contextAware);
         this.targetManagement = targetManagement;
     }
 
     @Override
     @Transactional(propagation = Propagation.REQUIRES_NEW)
     public void checkAllTargets() {
-        LOGGER.debug("Auto assign check call for tenant {} started", getTenantAware().getCurrentTenant());
+        LOGGER.debug("Auto assign check call for tenant {} started", getContextAware().getCurrentTenant());
         forEachFilterWithAutoAssignDS(this::checkByTargetFilterQueryAndAssignDS);
-        LOGGER.debug("Auto assign check call for tenant {} finished", getTenantAware().getCurrentTenant());
+        LOGGER.debug("Auto assign check call for tenant {} finished", getContextAware().getCurrentTenant());
     }
 
     @Override
     public void checkSingleTarget(String controllerId) {
-        LOGGER.debug("Auto assign check call for tenant {} and device {} started", getTenantAware().getCurrentTenant(),
+        LOGGER.debug("Auto assign check call for tenant {} and device {} started", getContextAware().getCurrentTenant(),
                 controllerId);
         forEachFilterWithAutoAssignDS(filter -> checkForDevice(controllerId, filter));
-        LOGGER.debug("Auto assign check call for tenant {} and device {} finished", getTenantAware().getCurrentTenant(),
+        LOGGER.debug("Auto assign check call for tenant {} and device {} finished", getContextAware().getCurrentTenant(),
                 controllerId);
     }
 
     /**
-     * Fetches the distribution set, gets all controllerIds and assigns the DS
-     * to them. Catches PersistenceException and own exceptions derived from
+     * Fetches the distribution set, gets all controllerIds and assigns the DS to
+     * them. Catches PersistenceException and own exceptions derived from
      * AbstractServerRtException
      *
      * @param targetFilterQuery
@@ -91,34 +90,34 @@ public class AutoAssignChecker extends AbstractAutoAssignExecutor {
      */
     private void checkByTargetFilterQueryAndAssignDS(final TargetFilterQuery targetFilterQuery) {
         LOGGER.debug("Auto assign check call for tenant {} and target filter query id {} started",
-                getTenantAware().getCurrentTenant(), targetFilterQuery.getId());
+                getContextAware().getCurrentTenant(), targetFilterQuery.getId());
         try {
             int count;
             do {
                 final List<String> controllerIds = targetManagement
-                        .findByTargetFilterQueryAndNonDSAndCompatible(
+                        .findByTargetFilterQueryAndNonDSAndCompatibleAndUpdatable(
                                 PageRequest.of(0, Constants.MAX_ENTRIES_IN_STATEMENT),
                                 targetFilterQuery.getAutoAssignDistributionSet().getId(), targetFilterQuery.getQuery())
-                        .getContent().stream().map(Target::getControllerId).collect(Collectors.toList());
+                        .getContent().stream().map(Target::getControllerId).toList();
                 LOGGER.debug(
                         "Retrieved {} auto assign targets for tenant {} and target filter query id {}, starting with assignment",
-                        controllerIds.size(), getTenantAware().getCurrentTenant(), targetFilterQuery.getId());
+                        controllerIds.size(), getContextAware().getCurrentTenant(), targetFilterQuery.getId());
 
                 count = runTransactionalAssignment(targetFilterQuery, controllerIds);
                 LOGGER.debug(
                         "Assignment for {} auto assign targets for tenant {} and target filter query id {} finished",
-                        controllerIds.size(), getTenantAware().getCurrentTenant(), targetFilterQuery.getId());
+                        controllerIds.size(), getContextAware().getCurrentTenant(), targetFilterQuery.getId());
             } while (count == Constants.MAX_ENTRIES_IN_STATEMENT);
         } catch (final PersistenceException | AbstractServerRtException e) {
             LOGGER.error("Error during auto assign check of target filter query id {}", targetFilterQuery.getId(), e);
         }
         LOGGER.debug("Auto assign check call for tenant {} and target filter query id {} finished",
-                getTenantAware().getCurrentTenant(), targetFilterQuery.getId());
+                getContextAware().getCurrentTenant(), targetFilterQuery.getId());
     }
 
     private void checkForDevice(final String controllerId, final TargetFilterQuery targetFilterQuery) {
         LOGGER.debug("Auto assign check call for tenant {} and target filter query id {} for device {} started",
-                getTenantAware().getCurrentTenant(), targetFilterQuery.getId(), controllerId);
+                getContextAware().getCurrentTenant(), targetFilterQuery.getId(), controllerId);
         try {
             final boolean controllerIdMatches = targetManagement.isTargetMatchingQueryAndDSNotAssignedAndCompatible(
                     controllerId, targetFilterQuery.getAutoAssignDistributionSet().getId(),
@@ -132,6 +131,6 @@ public class AutoAssignChecker extends AbstractAutoAssignExecutor {
             LOGGER.error("Error during auto assign check of target filter query id {}", targetFilterQuery.getId(), e);
         }
         LOGGER.debug("Auto assign check call for tenant {} and target filter query id {} finished",
-                getTenantAware().getCurrentTenant(), targetFilterQuery.getId());
+                getContextAware().getCurrentTenant(), targetFilterQuery.getId());
     }
 }
